<resources>
    <string name="app_name">Service Novigrad</string>
    <string name="login_button">SIGN IN</string>
    <string name="register_button">REGISTER</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="placeholder_message">You shouldn\'t be seeing this</string>
    <string name="register_message">Welcome to Service Novigrad!\nWhat type of account would you like to register?</string>
    <string name="register_customer">Customer Account</string>
    <string name="register_branch">Branch Employee Account</string>
    <string name="service_novigrad">Service Novigrad</string>
    <string name="enter_credentials">Please enter your credentials</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="branch_name_hint">Branch Name</string>
    <string name="admin_branch_accounts">Branch Accounts</string>
    <string name="admin_branch_header">All Branch Accounts</string>
    <string name="cancel">Cancel</string>
    <string name="edit_services">Services Editor</string>
    <string name="delete_branch">Delete Branch</string>
    <string name="placeholder">Placeholder</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_branch">Are you sure you want to delete the %1$s branch?</string>
    <string name="branch_deleted">The %1$s branch has been deleted</string>
    <string name="admin_customer_accounts">Customer Accounts</string>
    <string name="admin_customer_header">All Customer Accounts</string>
    <string name="are_you_sure_customer">Are you sure you want to delete %1$s?</string>
    <string name="customer_deleted">The customer %1$s has been deleted</string>
    <string name="admin_services_header">All Services</string>
    <string name="add">Add</string>
    <string name="form_fields">Required Form Fields</string>
    <string name="document_types">Required Documents</string>
    <string name="submit">Submit</string>
    <string name="edit_service_name">Edit Name</string>
    <string name="edit_branch">Edit Branch</string>
    <string name="branch_info">Branch Info</string>
    <string name="services_offered">Services Offered</string>
    <string name="service_requests">Service Requests</string>
    <string name="edit">Edit</string>
    <string name="change">Change</string>
    <string name="select_services_offered">Select Services Offered</string>
    <string name="working_hours">Weekly Working Hours</string>
    <string name="employee_requests_header">All Service Requests</string>
    <string name="refresh">Refresh</string>
    <string name="form">Form</string>
    <string name="documents">Documents</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="day">Day</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="edit_working_hours">Edit Working Hours</string>
    <string name="search_by_address">Search by Address</string>
    <string name="search_by_hours">Search by Working Hours</string>
    <string name="search_by_services">Search by Services Provided</string>
    <string name="services_to_search_for">Services Included</string>
    <string name="search">Search</string>
    <string name="search_by_services_offered">Search by Services Offered</string>
    <string name="clear">Clear</string>
    <string name="search_results">Search Results</string>
    <string name="search_by_address_subheader">Fill at least one field</string>
    <string name="street_number">Street Number</string>
    <string name="street_name">Street Name</string>
    <string name="postal_code">Postal Code</string>
    <string name="search_by_hours_subheader">Fill either open time, close time, or both</string>
    <string name="from_time">Open Time (Format: 09:00 AM)</string>
    <string name="to_time">Close Time (Format: 06:00 PM)</string>
    <string name="rate_branch">Rate</string>
    <string name="branch_request">Request</string>
    <string name="enter_comment">Please enter comments here...</string>
    <string name="branch_reviews">Branch Reviews</string>
    <string name="all_reviews">Reviews</string>
    <string name="back">Back</string>
    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="customer_choose_service">Choose a service to request</string>
    <string name="upload">Upload</string>
    <string name="back_to_home_page">Back to home page</string>
    <string name="dismiss">Dismiss</string>
</resources>