<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/search_by_address_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_address"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/search_by_address_subheader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_address_subheader"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/search_by_address_streetNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/street_number"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/search_by_address_streetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/street_name"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/search_by_address_postalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/postal_code"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/search_by_address_search"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/search" />

    </LinearLayout>


</RelativeLayout>