<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/search_by_services_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/search_by_services_offered"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_by_services_header"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/search_by_services_subheader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/services_to_search_for"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/search_by_services_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/clear" />

        <Button
            android:id="@+id/search_by_services_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.4"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/add" />

    </LinearLayout>

    <ListView
        android:id="@+id/search_by_services_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_layout"
        android:layout_below="@id/top_layout"
        android:layout_gravity="top">

    </ListView>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/search_by_services_searchBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.6"
            android:text="@string/search" />
    </LinearLayout>

</RelativeLayout>