<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="1sp">

        <TextView
            android:id="@+id/chosen_branch_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/chosen_branch_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textSize="20sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/rate_branch"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="center"
                android:text="@string/rate_branch" />

            <Button
                android:id="@+id/book_service"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center"
                android:text="@string/branch_request" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>