<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/conf_dialog_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textSize="24sp" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/conf_dialog_cancel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="center"
                android:text="@string/cancel" />

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/conf_dialog_delete"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center"
                android:text="@string/delete" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>